# concordance

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  cpp-linter.yml
.github/workflows/: build-and-run-clang-tidy.yaml  build-and-test.yaml  build.yml  clang-format.yml  clang-tidy.yml  cpp-linter.yml
cmake/: compile_options.txt  sources.cmake  tests.txt
include/: concordance.hpp
src/: concordance.cpp  main.cpp
tests/hello_world/: output
tests/problem_statement_correct/: output
tests/problem_statement_original_wrong/: input  output
tests/two_words_in_two_sentences/: input  output
